--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -241,7 +241,8 @@
           float: left;
           width: 70%;
           font-weight: bold;
-          color: #4a7fb3; }
+          color: #4a7fb3;
+          font-size: 14px; }
         .profile > .profile-content .settings .grupo input.settings-switch:checked + label:before {
           background-color: #4a7fb3; }
         .profile > .profile-content .settings .grupo input.settings-switch:checked + label:after {
