--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -39,6 +39,7 @@
       width: 70%;
       font-weight: bold;
       color: $color-blue;
+      font-size: 14px;
     }
     input.settings-switch:checked + label:before {
       background-color: $color-blue;
