--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -10,6 +10,9 @@ $color-blue-nav-hover: lighten($color-blue-nav, 10%);
 
 $color-blue: #4a7fb3;
 $color-blue-hover: lighten($color-blue, 10%);
+
+$color-dark-blue: #2d415c;
+
 $color-green: #71aa30;
 $color-green-hover: lighten($color-green, 10%);
 
