--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -28,11 +28,14 @@
 }
 
 .history {
-  padding-top: 10px;
+  font-family: $font-sans;
+  padding-top: 20px;
   .grupo {
     padding: 0 10px;
   }
   &.dates {
+    padding-top: 40px;
+
     .input-group {
       padding: 0 10px;
     }
@@ -43,6 +46,71 @@
       line-height: 25px;
       text-indent: 5px;
     }
+  }
+  .header {
+    color: $color-blue;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  .place {
+    .row {
+      margin: 0 -5px;
+      .col-xs-3 {
+        padding: 0 5px;
+      }
+    }
+    > div:nth-child(1) {
+      border-top: 1px solid #cccccc;
+    }
+    > div {
+      line-height: 40px;
+      min-height: 40px;
+      border-bottom: 1px solid #cccccc;
+    }
+    > .row:nth-child(even) {
+      background: #ffffff;
+    }
+    > .row:nth-child(odd) {
+      background: #eeeeee;
+    }
+    .bag {
+      clear: both;
+      border-top: 1px solid #cccccc;
+      .details {
+        font-size: 13px;
+        margin: 10px 5px;
+        background: $color-dark-blue;
+        color: #ffffff;
+        line-height: 20px;
+        padding: 10px;
+
+        .result,
+        .total {
+          text-align: right;
+          font-weight: bold;
+        }
+        .line {
+          font-weight: bold;
+          &.market {
+            font-weight: normal;
+          }
+        }
+        .game {
+          font-size: 12px;
+          color: $color-blue-hover;
+        }
+        .pushed i {
+          color: orange;
+        }
+        .won i {
+          color: green;
+        }
+        .loss i {
+          color: red;
+        }
+      }
+    }
+
   }
 }
 
