--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -34,9 +34,11 @@
   .grupo {
     padding: 0 10px;
     .grupo-title {
+      font-weight: normal;
       color: $color-text-box;
     }
     &.active .grupo-title {
+      font-weight: bold;
       color: $color-blue;
     }
   }
