ref #94: Fix History page.

--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -305,6 +305,9 @@
           color: green; }
         .profile .history .place .bag .details .loss i {
           color: red; }
+    .profile .history .place > .row[data-type=sportsbook]:hover {
+      cursor: pointer;
+      background: #bbbbbb; }
   .profile .date {
     position: relative; }
     .profile .date button {
