--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -121,7 +121,10 @@
         }
       }
     }
-
+    > .row[data-type=sportsbook]:hover {
+      cursor: pointer;
+      background: darken(#eeeeee, 20%);
+    }
   }
 }
 
