ref #94: Fix History page.

--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -307,7 +307,7 @@
           color: red; }
     .profile .history .place > .row[data-type=sportsbook]:hover {
       cursor: pointer;
-      background: #bbbbbb; }
+      background: #99ccff; }
   .profile .date {
     position: relative; }
     .profile .date button {
