--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -123,7 +123,7 @@
     }
     > .row[data-type=sportsbook]:hover {
       cursor: pointer;
-      background: darken(#eeeeee, 20%);
+      background: $color-blue-nav;
     }
   }
 }
