ref #94: Fix Communications page.

--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -40,6 +40,11 @@ form {
       position: absolute;
       top: 5px;
     }
+
+    textarea.form-control {
+      height: 100px;
+      border-radius: 6px;
+    }
   }
 
   input[type="submit"] {
