--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -315,6 +315,8 @@
       right: 20px;
       top: 5px;
       z-index: 3; }
+  .profile .wrap-table {
+    margin: 0 -8px; }
   .profile > .profile-content {
     background-color: #FFF;
     border-right: 2px solid #4a7fb3;
@@ -355,6 +357,9 @@
       .profile > .profile-content form .input-group i {
         position: absolute;
         top: 5px; }
+      .profile > .profile-content form .input-group textarea.form-control {
+        height: 100px;
+        border-radius: 6px; }
     .profile > .profile-content form input[type="submit"] {
       background: #71aa30;
       border-radius: 6px;
